--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ html {
 body {
   font-family: "Lora", Georgia, "Times New Roman", Times, serif;
   font-size: 17px;
-  line-height: 1.428571429;
+  line-height: 1.5;
   color: #50576a;
   background-color: #f9f9f9;
 }
@@ -298,7 +298,7 @@ img {
 }
 .img-thumbnail {
   padding: 4px;
-  line-height: 1.428571429;
+  line-height: 1.5;
   background-color: #f9f9f9;
   border: 1px solid #dddddd;
   border-radius: 4px;
@@ -312,8 +312,8 @@ img {
   border-radius: 50%;
 }
 hr {
-  margin-top: 24px;
-  margin-bottom: 24px;
+  margin-top: 25px;
+  margin-bottom: 25px;
   border: 0;
   border-top: 1px solid #eeeeee;
 }
@@ -328,10 +328,10 @@ hr {
   border: 0;
 }
 p {
-  margin: 0 0 12px;
+  margin: 0 0 12.5px;
 }
 .lead {
-  margin-bottom: 24px;
+  margin-bottom: 25px;
   font-size: 19px;
   font-weight: 200;
   line-height: 1.4;
@@ -438,8 +438,8 @@ h6 .small,
 h1,
 h2,
 h3 {
-  margin-top: 24px;
-  margin-bottom: 12px;
+  margin-top: 25px;
+  margin-bottom: 12.5px;
 }
 h1 small,
 h2 small,
@@ -452,8 +452,8 @@ h3 .small {
 h4,
 h5,
 h6 {
-  margin-top: 12px;
-  margin-bottom: 12px;
+  margin-top: 12.5px;
+  margin-bottom: 12.5px;
 }
 h4 small,
 h5 small,
@@ -488,14 +488,14 @@ h6,
   font-size: 15px;
 }
 .page-header {
-  padding-bottom: 11px;
-  margin: 48px 0 24px;
+  padding-bottom: 11.5px;
+  margin: 50px 0 25px;
   border-bottom: 1px solid #eeeeee;
 }
 ul,
 ol {
   margin-top: 0;
-  margin-bottom: 12px;
+  margin-bottom: 12.5px;
 }
 ul ul,
 ol ul,
@@ -520,11 +520,11 @@ ol ol {
   padding-left: 0;
 }
 dl {
-  margin-bottom: 24px;
+  margin-bottom: 25px;
 }
 dt,
 dd {
-  line-height: 1.428571429;
+  line-height: 1.5;
 }
 dt {
   font-weight: bold;
@@ -576,8 +576,8 @@ abbr.initialism {
   text-transform: uppercase;
 }
 blockquote {
-  padding: 12px 24px;
-  margin: 0 0 24px;
+  padding: 12.5px 25px;
+  margin: 0 0 25px;
   border-left: 5px solid #eeeeee;
 }
 blockquote p {
@@ -590,7 +590,7 @@ blockquote p:last-child {
 }
 blockquote small {
   display: block;
-  line-height: 1.428571429;
+  line-height: 1.5;
   color: #999999;
 }
 blockquote small:before {
@@ -620,9 +620,9 @@ blockquote:after {
   content: "";
 }
 address {
-  margin-bottom: 24px;
+  margin-bottom: 25px;
   font-style: normal;
-  line-height: 1.428571429;
+  line-height: 1.5;
 }
 code,
 kbd,
@@ -640,10 +640,10 @@ code {
 }
 pre {
   display: block;
-  padding: 11.5px;
-  margin: 0 0 12px;
+  padding: 12px;
+  margin: 0 0 12.5px;
   font-size: 16px;
-  line-height: 1.428571429;
+  line-height: 1.5;
   word-break: break-all;
   word-wrap: break-word;
   color: #333333;
@@ -1367,7 +1367,7 @@ th {
 }
 .table {
   width: 100%;
-  margin-bottom: 24px;
+  margin-bottom: 25px;
 }
 .table > thead > tr > th,
 .table > tbody > tr > th,
@@ -1376,7 +1376,7 @@ th {
 .table > tbody > tr > td,
 .table > tfoot > tr > td {
   padding: 8px;
-  line-height: 1.428571429;
+  line-height: 1.5;
   vertical-align: top;
   border-top: 1px solid #dddddd;
 }
@@ -1515,7 +1515,7 @@ table th[class*="col-"] {
 @media (max-width: 767px) {
   .table-responsive {
     width: 100%;
-    margin-bottom: 18px;
+    margin-bottom: 18.75px;
     overflow-y: hidden;
     overflow-x: scroll;
     -ms-overflow-style: -ms-autohiding-scrollbar;
@@ -1568,7 +1568,7 @@ legend {
   display: block;
   width: 100%;
   padding: 0;
-  margin-bottom: 24px;
+  margin-bottom: 25px;
   font-size: 25.5px;
   line-height: inherit;
   color: #50576a;
@@ -1619,17 +1619,17 @@ output {
   display: block;
   padding-top: 9px;
   font-size: 17px;
-  line-height: 1.428571429;
+  line-height: 1.5;
   color: #50576a;
   vertical-align: middle;
 }
 .form-control {
   display: block;
   width: 100%;
-  height: 42px;
+  height: 43px;
   padding: 8px 12px;
   font-size: 17px;
-  line-height: 1.428571429;
+  line-height: 1.5;
   color: #50576a;
   vertical-align: middle;
   background-color: #ffffff;
@@ -1674,7 +1674,7 @@ textarea.form-control {
 .radio,
 .checkbox {
   display: block;
-  min-height: 24px;
+  min-height: 25px;
   margin-top: 10px;
   margin-bottom: 10px;
   padding-left: 20px;
@@ -1727,29 +1727,29 @@ fieldset[disabled] .checkbox-inline {
   cursor: not-allowed;
 }
 .input-sm {
-  height: 34px;
+  height: 35px;
   padding: 5px 10px;
   font-size: 15px;
   line-height: 1.5;
   border-radius: 3px;
 }
 select.input-sm {
-  height: 34px;
-  line-height: 34px;
+  height: 35px;
+  line-height: 35px;
 }
 textarea.input-sm {
   height: auto;
 }
 .input-lg {
-  height: 62px;
+  height: 63px;
   padding: 14px 16px;
   font-size: 22px;
   line-height: 1.33;
   border-radius: 6px;
 }
 select.input-lg {
-  height: 62px;
-  line-height: 62px;
+  height: 63px;
+  line-height: 63px;
 }
 textarea.input-lg {
   height: auto;
@@ -1907,7 +1907,7 @@ textarea.input-lg {
   white-space: nowrap;
   padding: 8px 12px;
   font-size: 17px;
-  line-height: 1.428571429;
+  line-height: 1.5;
   border-radius: 4px;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -2910,7 +2910,7 @@ input[type="button"].btn-block {
 }
 .dropdown-menu .divider {
   height: 1px;
-  margin: 11px 0;
+  margin: 11.5px 0;
   overflow: hidden;
   background-color: #e5e5e5;
 }
@@ -2919,7 +2919,7 @@ input[type="button"].btn-block {
   padding: 3px 20px;
   clear: both;
   font-weight: normal;
-  line-height: 1.428571429;
+  line-height: 1.5;
   color: #333333;
   white-space: nowrap;
 }
@@ -2960,7 +2960,7 @@ input[type="button"].btn-block {
   display: block;
   padding: 3px 20px;
   font-size: 15px;
-  line-height: 1.428571429;
+  line-height: 1.5;
   color: #999999;
 }
 .dropdown-backdrop {
@@ -3246,7 +3246,7 @@ input[type="button"].btn-block {
 .input-group-lg > .form-control,
 .input-group-lg > .input-group-addon,
 .input-group-lg > .input-group-btn > .btn {
-  height: 62px;
+  height: 63px;
   padding: 14px 16px;
   font-size: 22px;
   line-height: 1.33;
@@ -3255,8 +3255,8 @@ input[type="button"].btn-block {
 select.input-group-lg > .form-control,
 select.input-group-lg > .input-group-addon,
 select.input-group-lg > .input-group-btn > .btn {
-  height: 62px;
-  line-height: 62px;
+  height: 63px;
+  line-height: 63px;
 }
 textarea.input-group-lg > .form-control,
 textarea.input-group-lg > .input-group-addon,
@@ -3266,7 +3266,7 @@ textarea.input-group-lg > .input-group-btn > .btn {
 .input-group-sm > .form-control,
 .input-group-sm > .input-group-addon,
 .input-group-sm > .input-group-btn > .btn {
-  height: 34px;
+  height: 35px;
   padding: 5px 10px;
   font-size: 15px;
   line-height: 1.5;
@@ -3275,8 +3275,8 @@ textarea.input-group-lg > .input-group-btn > .btn {
 select.input-group-sm > .form-control,
 select.input-group-sm > .input-group-addon,
 select.input-group-sm > .input-group-btn > .btn {
-  height: 34px;
-  line-height: 34px;
+  height: 35px;
+  line-height: 35px;
 }
 textarea.input-group-sm > .form-control,
 textarea.input-group-sm > .input-group-addon,
@@ -3429,7 +3429,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 .nav .nav-divider {
   height: 1px;
-  margin: 11px 0;
+  margin: 11.5px 0;
   overflow: hidden;
   background-color: #e5e5e5;
 }
@@ -3445,7 +3445,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 .nav-tabs > li > a {
   margin-right: 2px;
-  line-height: 1.428571429;
+  line-height: 1.5;
   border: 1px solid transparent;
   border-radius: 4px 4px 0 0;
 }
@@ -3601,7 +3601,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .navbar {
   position: relative;
   min-height: 50px;
-  margin-bottom: 24px;
+  margin-bottom: 25px;
   border: 1px solid transparent;
 }
 .navbar:before,
@@ -3756,9 +3756,9 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 .navbar-brand {
   float: left;
-  padding: 13px 15px;
+  padding: 12.5px 15px;
   font-size: 22px;
-  line-height: 24px;
+  line-height: 25px;
 }
 .navbar-brand:hover,
 .navbar-brand:focus {
@@ -3795,12 +3795,12 @@ textarea.input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-nav {
-  margin: 6.5px -15px;
+  margin: 6.25px -15px;
 }
 .navbar-nav > li > a {
   padding-top: 10px;
   padding-bottom: 10px;
-  line-height: 24px;
+  line-height: 25px;
 }
 @media (max-width: 767px) {
   .navbar-nav .open .dropdown-menu {
@@ -3817,7 +3817,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
     padding: 5px 15px 5px 25px;
   }
   .navbar-nav .open .dropdown-menu > li > a {
-    line-height: 24px;
+    line-height: 25px;
   }
   .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-nav .open .dropdown-menu > li > a:focus {
@@ -3833,8 +3833,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
     float: left;
   }
   .navbar-nav > li > a {
-    padding-top: 13px;
-    padding-bottom: 13px;
+    padding-top: 12.5px;
+    padding-bottom: 12.5px;
   }
 }
 @media (min-width: 768px) {
@@ -3853,8 +3853,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
   border-bottom: 1px solid transparent;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
-  margin-top: 4px;
-  margin-bottom: 4px;
+  margin-top: 3.5px;
+  margin-bottom: 3.5px;
 }
 @media (min-width: 768px) {
   .navbar-form .form-group {
@@ -3910,13 +3910,13 @@ textarea.input-group-sm > .input-group-btn > .btn {
   right: 0;
 }
 .navbar-btn {
-  margin-top: 4px;
-  margin-bottom: 4px;
+  margin-top: 3.5px;
+  margin-bottom: 3.5px;
 }
 .navbar-text {
   float: left;
-  margin-top: 13px;
-  margin-bottom: 13px;
+  margin-top: 12.5px;
+  margin-bottom: 12.5px;
 }
 @media (min-width: 768px) {
   .navbar-text {
@@ -4124,7 +4124,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 .breadcrumb {
   padding: 8px 15px;
-  margin-bottom: 24px;
+  margin-bottom: 25px;
   list-style: none;
   background-color: #f5f5f5;
   border-radius: 4px;
@@ -4143,7 +4143,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .pagination {
   display: inline-block;
   padding-left: 0;
-  margin: 24px 0;
+  margin: 25px 0;
   border-radius: 4px;
 }
 .pagination > li {
@@ -4154,7 +4154,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   position: relative;
   float: left;
   padding: 8px 12px;
-  line-height: 1.428571429;
+  line-height: 1.5;
   text-decoration: none;
   background-color: #ffffff;
   border: 1px solid #dddddd;
@@ -4232,7 +4232,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 .pager {
   padding-left: 0;
-  margin: 24px 0;
+  margin: 25px 0;
   list-style: none;
   text-align: center;
 }
@@ -4391,7 +4391,7 @@ a.list-group-item.active > .badge,
   margin-bottom: 30px;
   font-size: 26px;
   font-weight: 200;
-  line-height: 2.1428571435;
+  line-height: 2.25;
   color: inherit;
   background-color: #f1f1f1;
 }
@@ -4420,7 +4420,7 @@ a.list-group-item.active > .badge,
 }
 .thumbnail {
   padding: 4px;
-  line-height: 1.428571429;
+  line-height: 1.5;
   background-color: #f9f9f9;
   border: 1px solid #dddddd;
   border-radius: 4px;
@@ -4430,7 +4430,7 @@ a.list-group-item.active > .badge,
   max-width: 100%;
   height: auto;
   display: block;
-  margin-bottom: 24px;
+  margin-bottom: 25px;
 }
 .thumbnail > img {
   display: block;
@@ -4450,7 +4450,7 @@ a.thumbnail.active {
 }
 .alert {
   padding: 15px;
-  margin-bottom: 24px;
+  margin-bottom: 25px;
   border: 1px solid transparent;
   border-radius: 4px;
 }
@@ -4555,8 +4555,8 @@ a.thumbnail.active {
 }
 .progress {
   overflow: hidden;
-  height: 24px;
-  margin-bottom: 24px;
+  height: 25px;
+  margin-bottom: 25px;
   background-color: #f5f5f5;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -4567,7 +4567,7 @@ a.thumbnail.active {
   width: 0%;
   height: 100%;
   font-size: 15px;
-  line-height: 24px;
+  line-height: 25px;
   color: #ffffff;
   text-align: center;
   background-color: #428bca;
@@ -4716,7 +4716,7 @@ a.list-group-item.active:focus .list-group-item-text {
   line-height: 1.3;
 }
 .panel {
-  margin-bottom: 24px;
+  margin-bottom: 25px;
   background-color: #ffffff;
   border: 1px solid transparent;
   border-radius: 4px;
@@ -5076,14 +5076,14 @@ button.close {
 .modal-header {
   padding: 15px;
   border-bottom: 1px solid #e5e5e5;
-  min-height: 16.428571429px;
+  min-height: 16.5px;
 }
 .modal-header .close {
   margin-top: -2px;
 }
 .modal-title {
   margin: 0;
-  line-height: 1.428571429;
+  line-height: 1.5;
 }
 .modal-body {
   position: relative;
@@ -5997,10 +5997,10 @@ td.visible-print {
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 }
 .navbar-nav > li > a {
-  padding-top: 19px;
+  padding-top: 18.5px;
 }
 .navbar-brand {
-  padding-top: 18px;
+  padding-top: 17.5px;
 }
 .btn-default,
 .btn-default:hover {
@@ -6097,8 +6097,7 @@ td.visible-print {
   border: 3px #eeeeee solid;
 }
 .index {
-  margin-top: 40px;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
 }
 .index .date {
   color: #999999;
@@ -6110,9 +6109,19 @@ td.visible-print {
 .index h3 a:hover {
   text-decoration: none;
 }
-.well h1 {
+#disqus_thread {
+  margin-top: 60px;
+}
+img.headline {
+  width: auto;
+  height: 125px;
+}
+h1 {
   margin-top: 10px;
-  margin-bottom: 36px;
+  margin-bottom: 26px;
+}
+svg {
+  margin: 15px 0;
 }
 .highlight {
   padding-top: 10px;
