--- a/less/style.less
+++ b/less/style.less
@@ -35,8 +35,7 @@
 }
 
 .index {
-  margin-top: 40px;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
 
   .date {
     color: @gray-light;
@@ -50,11 +49,22 @@
   }
 }
 
-.well {
-  h1 {
-    margin-top: 10px;
-    margin-bottom: 36px;
-  }
+#disqus_thread {
+  margin-top: 60px;
+}
+
+img.headline {
+  width: auto;
+  height: 125px;
+}
+
+h1 {
+  margin-top: 10px;
+  margin-bottom: 26px;
+}
+
+svg {
+  margin: 15px 0;
 }
 
 .highlight {
